Wed Jul 25 17:40:57 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/build.pl:

          If using eclipse to build from the command line
          then if an error is encountered don't pop up a
          dialog box.

Tue Jul 24 23:45:40 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/gen-throughput-tables.pl:
        * performance-tests/Bench/bin/generate-perf-html.sh:
        * performance-tests/Bench/bin/plot-throughput-testformats.gpi:
        * performance-tests/Bench/bin/plot-throughput-transports.gpi:
          Corrected throughput plot indices, rtps transport name detection
          and html generation.

Tue Jul 24 15:29:57 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcps.mpc:
        * dds/dcps_bits_source.mpb:

          Generated files that are only generated when built_in_topics
          is enabled must be listed in dcps_bits_source.mpb and not DdsDcps.mpc.

Mon Jul 23 23:42:47 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/extract-throughput.pl:
          Correct transport name detection.

Sun Jul 22 22:27:23 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/ConfigTransports/ConfigTransports.mpc:
        * tests/DCPS/Ownership/Ownership.mpc:
        * tests/DCPS/Partition/Partition.mpc:
          Added missing libraries for static builds.

Thu Jul 19 20:19:13 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/plot-throughput-testformats.gpi:
        * performance-tests/Bench/bin/plot-throughput-transports.gpi:
          Corrected typos.

Thu Jul 19 18:39:13 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/ConfigTransports/publisher.cpp:
        * tests/DCPS/ConfigTransports/subscriber.cpp:
        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/DomainParticipantId/dp.cpp:
        * tests/DCPS/Ownership/publisher.cpp: